k8s/04-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-dashboard-route
  namespace: k8s-dashboard
  labels:
    app: k8s-dashboard
    app.kubernetes.io/part-of: k8s-dashboard
spec:
  parentRefs:
  - name: main-gateway
    namespace: istio-system
  hostnames:
  - "k8s-dashboard.dev.softnethq.co.tz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: k8s-dashboard
      port: 8080
